# Emotional-Tagging

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  README.md  index.html  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
crawler/: README.md  config.py  db_manager.py  dimension_extract.py  douban.py  main.py  requirements.txt  zhihu.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs
src-tauri/src/: api.rs  db.rs  lib.rs  main.rs  models.rs  recommend.rs
src/components/: CategorySelector.tsx  DimensionSliders.tsx  ResultsPanel.tsx  WorkCard.tsx
src/store/: preferences.ts
